<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/accent_view_rectangle_height"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/accent_view_rectangle_margin"
            android:layout_marginBottom="@dimen/accent_view_rectangle_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_one"
                android:textSize="@dimen/large_numeral_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/question_left_margin"
                android:layout_marginStart="@dimen/question_left_margin"
                android:layout_weight="1"
                android:text="@string/question_one" />

        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q1_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a1" />

            <RadioButton
                android:id="@+id/q1_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a2" />

            <RadioButton
                android:id="@+id/q1_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a3" />

            <RadioButton
                android:id="@+id/q1_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_a4" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/accent_view_rectangle_height"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/accent_view_rectangle_margin"
            android:layout_marginBottom="@dimen/accent_view_rectangle_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_two"
                android:textSize="@dimen/large_numeral_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/question_left_margin"
                android:layout_marginStart="@dimen/question_left_margin"
                android:layout_weight="1"
                android:text="@string/question_two" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q2_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a1" />

            <RadioButton
                android:id="@+id/q2_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a2" />

            <RadioButton
                android:id="@+id/q2_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a3" />

            <RadioButton
                android:id="@+id/q2_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_a4" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/accent_view_rectangle_height"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/accent_view_rectangle_margin"
            android:layout_marginBottom="@dimen/accent_view_rectangle_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_three"
                android:textSize="@dimen/large_numeral_text_size"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/question_left_margin"
                android:layout_marginStart="@dimen/question_left_margin"
                android:layout_weight="1"
                android:text="@string/question_three" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/q3_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a1"/>

        <CheckBox
            android:id="@+id/q3_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a2"/>

        <CheckBox
            android:id="@+id/q3_c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a3"/>

        <CheckBox
            android:id="@+id/q3_c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_a4"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/accent_view_rectangle_height"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/accent_view_rectangle_margin"
            android:layout_marginBottom="@dimen/accent_view_rectangle_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_four"
                android:textSize="@dimen/large_numeral_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/question_left_margin"
                android:layout_marginStart="@dimen/question_left_margin"
                android:layout_weight="1"
                android:text="@string/question_four" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q4_r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a1" />

            <RadioButton
                android:id="@+id/q4_r2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a2" />

            <RadioButton
                android:id="@+id/q4_r3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a3" />

            <RadioButton
                android:id="@+id/q4_r4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4_a4" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/accent_view_rectangle_height"
            android:background="@color/colorAccent"
            android:layout_marginTop="@dimen/accent_view_rectangle_margin"
            android:layout_marginBottom="@dimen/accent_view_rectangle_margin"/>

        <EditText
            android:id="@+id/contestant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/button_margin"
            android:onClick="checkAnswers"/>

    </LinearLayout>

</ScrollView>
